[tool.poetry]
name = "password-gen-api"
version = "0.1.0"
description = ""
authors = ["srusskih <smilemouse2002@ukr.net>"]
readme = "README.md"
packages = [{include = "password_gen_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
